# devotional-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml
devotional_engine/: __init__.py  adapters.py  agents.py  american_literature.py  approval.py  audit.py  blueprint.py  classical_hymnody.py  coherence.py  config.py  engine.py  evaluator.py  exceptions.py  harness.py  integrated.py  integrated_base.py  integrated_v67.py  ledger.py  literary.py  models.py  ontology.py  poetic_music.py  profiles.py  renderer.py  scripture.py  stage_cycle.py  states.py  text_utils.py  v64.py  v65.py  writing_core.py
docs/: AMERICAN_LITERARY_SYSTEM.md  ENGINE_REVIEW.md  GO_LIVE_CHECKLIST.md  MODULAR_STAGE_LOOP.md  ONTOLOGICAL_OVERLAY.md  POETIC_FLOW.md  SECURITY.md  TASTE_NARRATIVE_CONTRACT.md  WRITING_PROFILES.md
examples/: psalm18_mock_outputs.json  psalm19_mock_outputs.json  psalm20_mock_outputs.json  psalm21_mock_outputs.json  psalm22_mock_outputs.json  psalm23_mock_outputs.json  psalm24_mock_outputs.json  render_psalm22_html.py  run_psalm18_mock.py  run_psalm19_mock.py  run_psalm20_mock.py  run_psalm21_mock.py  run_psalm22_flow.py  run_psalm22_mock.py  run_psalm23_flow.py  run_psalm23_mock.py  run_psalm24_flow.py  run_psalm24_mock.py  show_american_style_brief.py
outputs/: psalm-42-devotional.md
reports/: psalm-42-validation.md
tests/: conftest.py  test_american_literature.py  test_blueprint.py  test_coherence.py  test_editorial_rollback.py  test_go_live_scaffolding.py  test_harness_poem.py  test_integrated_devotional.py  test_literary_economy.py  test_ontological_overlay.py  (+20 more)
(+1 files in other folders)
