[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devotional-engine"
version = "6.7.0"
description = "Literature-first Truth-Beauty writing engine with devotional, fiction, and nonfiction profiles"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["devotional_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
